deploy/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
spec:
  selector:
    matchLabels:
      run: graphql
  replicas: 1
  template:
    metadata:
      labels:
        run: graphql
    spec:
      containers:
      - name: graphql
        image: 10.42.0.1:5000/mealplanner_graphql:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: graphql
  labels:
    run: graphql
spec:
  type: ClusterIP
  ports:
  - port: 4000
    protocol: TCP
  selector:
    run: graphql
