deploy/admin-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: admin 
    http:
      paths:
        - path: /admin
          pathType: Prefix
          backend:
            service:
              name: admin
              port:
                number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  selector:
    matchLabels:
      run: admin
  replicas: 1
  template:
    metadata:
      labels:
        run: admin
    spec:
      containers:
      - name: admin
        image: 10.42.0.1:5000/mealplanner_admin:latest
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  labels:
    run: admin
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: admin
